# merge

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
data/scene_001_sf1P/: ground_truth.json
data/scene_001_sf1P/person_actions/: 1742756707.7442882_id_67bc6c24b50c035c485bbf56.pkl  1742756708.0477536_id_67bc6c24b50c035c485bbf56.pkl  1742756709.610319_id_67bc6c24b50c035c485bbf56.pkl  1742756709.8765373_id_67bc6c24b50c035c485bbf56.pkl  1742756710.149322_id_67bc6c24b50c035c485bbf56.pkl  1742756710.405972_id_67bc6c24b50c035c485bbf56.pkl  1742756710.6781309_id_67bc6c24b50c035c485bbf56.pkl  1742756710.938112_id_67bc6c24b50c035c485bbf56.pkl  1742756712.55594_id_67bc6c24b50c035c485bbf56.pkl  1742756713.0946963_id_67bc6c24b50c035c485bbf56.pkl  (+24 more)
data/scene_002_sf2P/: ground_truth.json
data/scene_003_sf2P/: ground_truth.json
data/scene_004_sf2P/: ground_truth.json
data/scene_005_sf1P1R/: ground_truth.json
data/scene_006_sf1P1R/: ground_truth.json
data/scene_007_sf2P1R/: ground_truth.json
data/scene_008_sf2P1R/: ground_truth.json
data/scene_009_po2P/: ground_truth.json
data/scene_010_po2P/: ground_truth.json
data/scene_011_po1P1R/: ground_truth.json
data/scene_012_po1P1R/: ground_truth.json
data/scene_013_ha2P/: ground_truth.json
data/scene_014_ha2P/: ground_truth.json
data/scene_015_ha1P1R/: ground_truth.json
data/scene_016_ha1P1R/: ground_truth.json
examples/: baselines.py
scripts/: blur_images.py  copy_ground.sh  copy_ground_eval.sh  evaluate.py  merge_full.py  side_by_side.py
src/merge/: __init__.py
(+718 files in other folders)
