[project]
name = "merge"
version = "0.1.0"
description = "This is the code base for the MERGE paper."
authors = [
    { name = "Joerg Deigmoeller", email = "joerg.deigmoeller@honda-ri.de" }
]
requires-python = ">=3.10,<4"
readme = "README.md"

dependencies = [
    "google-genai",
    "pillow",
    "openai",
    "opencv-python",
    "black",
    "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["src/merge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://package-cache.honda-ri.de/repository/pypi-proxy/simple"
default = true

[dependency-groups]
dev = [
    "ruff==0.15.1",
]

[tool.ruff]
line-length = 120
lint.select = ["E4", "E7", "E9", "F"]
format.docstring-code-format = true

[tool.isort]
profile = "black"
src_paths = ["examples", "src"]
skip = [
    "data",
    "venv",
    ".venv",
]
lines_after_imports = 2
