[project]
name = "merge"
version = "0.1.0"
description = "This is the code base for the MERGE paper."
authors = [
    { name = "Joerg Deigmoeller", email = "joerg.deigmoeller@honda-ri.de" }
]
requires-python = ">=3.10,<4"
readme = "README.md"

dependencies = [
    "google-genai",
    "pillow",
    "openai",
    "opencv-python",
    "black",
    "ruff",
    "deface"
]

[tool.hatch.build.targets.wheel]
packages = ["src/merge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"